// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns all resource definitions: SearchDefinitions-application 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <a
      rel="noopener noreferrer"
      target="_blank"
    >
      Launch health view
    </a>,
    "header": "Dashboard",
    "sort": "dashboard",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-applicationrelationship 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "source",
    "header": "Source",
    "sort": "source",
  },
  Object {
    "cell": "destination",
    "header": "Destination",
    "sort": "destination",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-channel 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "pathname",
    "header": "Pathname",
    "sort": "pathname",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cluster 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "ManagedClusterConditionAvailable",
    "header": "Available",
    "sort": "ManagedClusterConditionAvailable",
  },
  Object {
    "cell": "HubAcceptedManagedCluster",
    "header": "Hub accepted",
    "sort": "HubAcceptedManagedCluster",
  },
  Object {
    "cell": "ManagedClusterJoined",
    "header": "Joined",
    "sort": "ManagedClusterJoined",
  },
  Object {
    "cell": "nodes",
    "header": "Nodes",
    "sort": "nodes",
  },
  Object {
    "cell": "kubernetesVersion",
    "header": "Kubernetes version",
    "sort": "kubernetesVersion",
  },
  Object {
    "cell": "cpu",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "memory",
    "header": "Memory",
    "sort": "memory",
  },
  Object {
    "cell": "-",
    "header": "Console URL",
    "sort": "consoleURL",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-configmap 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-cronjob 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "schedule",
    "header": "schedule",
    "sort": "schedule",
  },
  Object {
    "cell": "suspend",
    "header": "Suspend",
    "sort": "suspend",
  },
  Object {
    "cell": "active",
    "header": "Active",
    "sort": "active",
  },
  Object {
    "cell": "-",
    "header": "Last schedule",
    "sort": "lastSchedule",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-daemonset 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "ready",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "updated",
    "header": "Updated",
    "sort": "updated",
  },
  Object {
    "cell": "available",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployable 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "chartUrl",
    "header": "Chart URL",
    "sort": "chartUrl",
  },
  Object {
    "cell": "dependencies",
    "header": "Dependencies",
    "sort": "dependencies",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-deployment 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "ready",
    "header": "Ready",
    "sort": "ready",
  },
  Object {
    "cell": "available",
    "header": "Available",
    "sort": "available",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-genericresource 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-helmrelease 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "sourceType",
    "header": "Source type",
    "sort": "sourceType",
  },
  Object {
    "cell": "url",
    "header": "URL",
    "sort": "url",
  },
  Object {
    "cell": "chartPath",
    "header": "Chart path",
    "sort": "chartPath",
  },
  Object {
    "cell": "branch",
    "header": "Branch",
    "sort": "branch",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-job 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "completions",
    "header": "Completions",
    "sort": "completions",
  },
  Object {
    "cell": "parallelism",
    "header": "Parallelism",
    "sort": "parallelism",
  },
  Object {
    "cell": "successful",
    "header": "Successful",
    "sort": "successful",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-namespace 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-node 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "role",
    "header": "Role",
    "sort": "role",
  },
  Object {
    "cell": "architecture",
    "header": "Architecture",
    "sort": "architecture",
  },
  Object {
    "cell": "osImage",
    "header": "OS image",
    "sort": "osImage",
  },
  Object {
    "cell": "cpu",
    "header": "CPU",
    "sort": "cpu",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolume 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "capacity",
    "header": "Capacity",
    "sort": "capacity",
  },
  Object {
    "cell": "accessMode",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "claimRef",
    "header": "Claim",
    "sort": "claimRef",
  },
  Object {
    "cell": "reclaimPolicy",
    "header": "Reclaim policy",
    "sort": "reclaimPolicy",
  },
  Object {
    "cell": "path",
    "header": "Path",
    "sort": "path",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-persistentvolumeclaim 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "volumeName",
    "header": "Persistent volume",
    "sort": "volumeName",
  },
  Object {
    "cell": "request",
    "header": "Requests",
    "sort": "request",
  },
  Object {
    "cell": "accessMode",
    "header": "Access mode",
    "sort": "accessMode",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementbinding 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "subjects",
    "header": "Subjects",
    "sort": "subjects",
  },
  Object {
    "cell": "placementpolicy",
    "header": "Placement policy",
    "sort": "placementpolicy",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementpolicy 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "replicas",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "decisions",
    "header": "Decisions",
    "sort": "decisions",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-placementrule 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "replicas",
    "header": "Replicas",
    "sort": "replicas",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-pod 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "restarts",
    "header": "Restarts",
    "sort": "restarts",
  },
  Object {
    "cell": "hostIP",
    "header": "Host IP",
    "sort": "hostIP",
  },
  Object {
    "cell": "podIP",
    "header": "Pod IP",
    "sort": "podIP",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-policy 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "disabled",
    "header": "Disabled",
    "sort": "disabled",
  },
  Object {
    "cell": "-",
    "header": "Compliant",
    "sort": "compliant",
  },
  Object {
    "cell": "remediationAction",
    "header": "Remediation action",
    "sort": "remediationAction",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-release 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "chartName",
    "header": "Chart name",
    "sort": "chartName",
  },
  Object {
    "cell": "chartVersion",
    "header": "Chart version",
    "sort": "chartVersion",
  },
  Object {
    "cell": "-",
    "header": "Updated",
    "sort": "updated",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-replicaset 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-secret 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-service 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "type",
    "header": "Type",
    "sort": "type",
  },
  Object {
    "cell": "clusterIP",
    "header": "Cluster IP",
    "sort": "clusterIP",
  },
  Object {
    "cell": "port",
    "header": "Port",
    "sort": "port",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-statefulset 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "desired",
    "header": "Desired",
    "sort": "desired",
  },
  Object {
    "cell": "current",
    "header": "Current",
    "sort": "current",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns all resource definitions: SearchDefinitions-subscription 1`] = `
Array [
  Object {
    "cell": <Link
      to={
        Object {
          "pathname": "/resources",
          "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestNamespace%26name%3DtestName",
        }
      }
    >
      testName
    </Link>,
    "header": "Name",
    "sort": "name",
  },
  Object {
    "cell": "namespace",
    "header": "Namespace",
    "sort": "namespace",
  },
  Object {
    "cell": "cluster",
    "header": "Cluster",
    "sort": "cluster",
  },
  Object {
    "cell": "package",
    "header": "Package",
    "sort": "package",
  },
  Object {
    "cell": "status",
    "header": "Status",
    "sort": "status",
  },
  Object {
    "cell": "localPlacement",
    "header": "Local placement",
    "sort": "localPlacement",
  },
  Object {
    "cell": "timeWindow",
    "header": "Time window",
    "sort": "timeWindow",
  },
  Object {
    "cell": "Invalid date",
    "header": "Created",
    "sort": "created",
  },
  Object {
    "cell": <AcmLabels
      labels={
        Array [
          "testLabel=label",
          "testLabel1=label1",
        ]
      }
    />,
    "header": "Labels",
    "sort": "label",
  },
]
`;

exports[`Correctly returns createDashboardLink 1`] = `
<a
  href="http://dashboard"
  rel="noopener noreferrer"
  target="_blank"
>
  Launch health view
</a>
`;

exports[`Correctly returns createDetailsLink - ACM-Application 1`] = `
<a
  href="/multicloud/applications/testApplicationNamespace/testApplicationName"
>
  testApplicationName
</a>
`;

exports[`Correctly returns createDetailsLink - Cluster 1`] = `
<a
  href="/multicloud/clusters/testClusterName/testClusterName"
>
  testClusterName
</a>
`;

exports[`Correctly returns createDetailsLink - Default 1`] = `
<Link
  to={
    Object {
      "pathname": "/resources",
      "search": "?cluster%3DtestCluster%26kind%3Dpod%26namespace%3DtestPodNamespace%26name%3DtestPodName",
    }
  }
>
  testPodName
</Link>
`;

exports[`Correctly returns createDetailsLink - HUB-Policy 1`] = `
<a
  href="/multicloud/policies/all/testPolicyName"
>
  testPolicyName
</a>
`;

exports[`Correctly returns createDetailsLink - Managed-Policy 1`] = `
<Link
  to={
    Object {
      "pathname": "/resources",
      "search": "?cluster%3DtestCluster%26kind%3Dpolicy%26namespace%3DtestPolicyNamespace%26name%3DtestPolicyName",
    }
  }
>
  testPolicyName
</Link>
`;

exports[`Correctly returns createDetailsLink - NON-Application 1`] = `
<Link
  to={
    Object {
      "pathname": "/resources",
      "search": "?cluster%3DtestCluster%26kind%3Dapplication%26namespace%3DtestApplicationNamespace%26name%3DtestApplicationName",
    }
  }
>
  testApplicationName
</Link>
`;

exports[`Correctly returns createExternalLink from clusterip 1`] = `"http://clusterip"`;

exports[`Correctly returns createExternalLink from consoleURL 1`] = `
<a
  href="http://consoleurl"
  rel="noopener noreferrer"
  target="_blank"
>
  Launch
</a>
`;

exports[`Correctly returns empty createDashboardLink 1`] = `"-"`;

exports[`Correctly returns empty createExternalLink 1`] = `"-"`;

exports[`Correctly returns empty labels 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions no timestamp 1`] = `"-"`;

exports[`Correctly returns formatSearchbarSuggestions with T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns formatSearchbarSuggestions without T in timestamp 1`] = `"3 days ago"`;

exports[`Correctly returns label components 1`] = `
<AcmLabels
  labels={
    Array [
      "testlabel=label1",
      "testlabel=label2",
    ]
  }
/>
`;

exports[`Correctly returns url search params with 0 params 1`] = `"?cluster%3DtestCluster"`;

exports[`Correctly returns url search params with all params & apigroup 1`] = `"?cluster%3DtestCluster%26kind%3Dpods%26apiversion%3Dv1%26namespace%3DtestNamespace%26name%3DtestName"`;

exports[`Correctly returns url search params with all params without apigroup 1`] = `"?cluster%3DtestCluster%26kind%3Dpods%26apiversion%3Dapps%2Fv1%26namespace%3DtestNamespace%26name%3DtestName"`;
